k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reise-spesen-planer
  labels:
    app.kubernetes.io/part-of: reise-spesen-planer
